--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,14 @@ header .about-box {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
+.why ul.info {
+  color: var(--main-text-color);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
 /* End Products & Services */
 
 /* Start Clients */
