--- a/css/main.css
+++ b/css/main.css
@@ -317,7 +317,7 @@ footer .information {
 
 .contact .information .title,
 footer .information .title {
-  margin-right: 15px;
+  min-width: 90px;
 }
 
 /* End Contact */
